<resources>
    <string name="app_name">Scudsbook</string>
    <string name="title_activity_maps">Map</string>
    <string name="key_connection">1z9kdjhekjndfhjahfuerhianfkjfnakheuroaihn</string>

    <string name="location_update">Start Location Update</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="security_fail">The application have authority issue, please download the application\'s latest version from Google store!</string>

    <!-- Main page strings -->
    <string name="main_title">Employee</string>
    <string name="main_manager_title">Manager</string>
    <string name="main_add_order">New Order</string>
    <string name="main_current_list">Current Order List</string>
    <string name="main_order_history">Order History</string>
    <string name="main_map_view">Map View</string>

    <!-- Order detial strings -->
    <string name="order_title">Order Information</string>
    <string name="text_deliver_by">Delivered By :&#160;</string>
    <string name="products">Products</string>
    <string name="deliver">Deliver</string>
    <string name="tips">Tips</string>
    <string name="deliver_no_set">No deliver set to this order!</string>
    <string name="set_deliver">Deliver this Order</string>
    <string name="set_deliver_dialog_title">Pick up this Order</string>
    <string name="set_deliver_dialog_message">Do you want to deliver this order to customer? Click Ok if you want!</string>
    <string name="set_deliver_by_manager">Set up a Deliver</string>
    <string name="set_deliver_dialog_message_by_manager_1">Do you want to set</string>
    <string name="set_deliver_dialog_message_by_manager_2">to deliver this order? Click Ok if you want!</string>

    <!-- New Order Page -->
    <string name="new_order_title">Add New Order</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_phone">Customer Phone</string>
    <string name="distance">Distance</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip Code</string>
    <string name="product_price">Product Cost</string>
    <string name="deliver_fee">Deliver Fee</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="add_submit">Submit</string>
    <string name="no_item_info">Please input all missing blank!</string>
</resources>
